\newcommand{\cpkg}{\href{http://CRAN.R-project.org/package=#1}{\pkg{#1}}}
\name{NEWS}
\title{News for Package \pkg{RGA}}
\encoding{UTF-8}

\section{Changes in version 0.2.4 (2015-08-31)}{
  \itemize{
    \item Update data
    \item Add query and profile info to the reporting api data. Use \code{attributes()} to see it
  }
}

\section{Changes in version 0.2.3 (2015-07-26)}{
  \itemize{
    \item Update data
    \item Remove deprecated function \code{get_firstadate()}. Use \code{firstdate()} instead
    \item Add \code{new.auth} argument in the \code{authorise()} function for the reauthorization
    \item When receiving the authorization error from the server (error 401), request authorization for the current session (without cacheing)
    \item Fix \code{list_unsampled_reports()} field typo
    \item Some fixes in the vignettes
    \item Add Common Queries vignette
  }
}

\section{Changes in version 0.2.2 (2015-06-13)}{
  \itemize{
    \item Update data
    \item Add \code{accept_json()} to the API requests
    \item Add CRAN version badge to the README
    \item Some fixes in the vignettes
    \item Fix dates in the NEWS
    \item Replace \cpkg{RCurl} dependency to \cpkg{curl}. Related with future \cpkg{httr} update
    \item Add functions for the Management API: \code{get_custom_dimension()}, \code{list_custom_dimensions()}, \code{get_custom_metric()}, \code{list_custom_metrics()}
  }
}

\section{Changes in version 0.2.1 (2015-03-17)}{
  \itemize{
    \item Fix column names in the Metadata API vignette
    \item \code{dimsmets()} now try to get data with \code{list_metadata()}. If \code{list_metadata()} causes a error used data from the package
    \item Fix Title in the DESCRIPTION file
  }
}

\section{Changes in version 0.2 (2015-02-02)}{
  \itemize{
    \item Update data
    \item Fix Descrition in the DESCRIPTION file